Patching CEF 2.8.0 pre
local-environment updates